--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,16 @@
         background: linear-gradient(90deg, #1235C7, #0E2897, #0C227F, #0C2488, #091A61);
     }
 
+    .primary-btn {
+        background: linear-gradient(to right, #202857, #4658BD);
+    }
+
+    .primary-text {
+        background: linear-gradient(to right, #202857, #4658BD);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
     /* SHADOW   */
     /*.login-shadow {*/
     /*    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.1),*/
