--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,6 +30,15 @@
         -webkit-text-fill-color: transparent;
     }
 
+    .custom-shadow {
+        box-shadow:
+                0px 5px 10px rgba(0, 0, 0, 0.10),
+                0px 19px 19px rgba(0, 0, 0, 0.09),
+                0px 43px 26px rgba(0, 0, 0, 0.05),
+                0px 76px 30px rgba(0, 0, 0, 0.01),
+                0px 118px 33px rgba(0, 0, 0, 0.00);
+    }
+
     /*.dark-gradient {*/
     /*    background: linear-gradient(135deg, #8BBD8E 0%, #FFFFFF 50%, #999999 100%);*/
     /*    -webkit-background-clip: text;*/
