--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,12 @@
             transform: scale(1);
         }
     }
+
+    @keyframes fadeIn {
+        to {
+            opacity: 1;
+        }
+    }
 }
 
 
@@ -77,7 +83,15 @@
                 0px 118px 33px rgba(0, 0, 0, 0.00);
     }
 
+    .animate-fade-in {
+        @apply opacity-0;
+        animation: fadeIn 0.4s ease-in-out forwards;
+    }
 
+    .animate-fade-in {
+        @apply opacity-0;
+        animation: fadeIn 0.4s ease-in-out forwards;
+    }
 
 
 
